[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/entity_push/entity_push.gd" type="Script" id=1]

[node name="entity_push" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="tree_entered" from="." to="." method="_on_entity_push_tree_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
